[tool.poetry]
name = "vaja1"
version = "0.1.1"
description = "Sprotne vaje pri predmetu Inženirstvo inteligentnih sistemov"
authors = ["aljazh1 <aljaz.herzog@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
flask = "^2.2.3"
sklearn = "^0.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
